Fix  DAY/NIGHT ICON bug on IOS

--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@
     margin-right: 4px;
     border: solid 1px darkcyan;
     border-radius: 5px;
-    height: 100%;
+    /*height: 100%;*/
     overflow: hidden;
   }
   
